tests/positive/basic/epoch_year_1970/input.ci
void main() { int ts = makeEpoch(1970, 1, 1, 0, 0, 0); print(toString(epochToYear(ts)) + "\n"); }
