tests/negative/semantic/reserved_constant_name/input.ci
void main() {
    int INT_MAX = 1;
}
